--- a/css/main.css
+++ b/css/main.css
@@ -97,21 +97,9 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#loginForm > button{
+    width:100%;
+}
 
 /* ==========================================================================
    Helper classes
