--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,14 @@ body{
     width:100%;
 }
 
+.addon-prez{
+    width : 200px;
+}
+
+.group-prez{
+    width : 100%;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
