Upload des photos de profil

--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,10 @@ body{
         width : 200px;
     }
 
+#imgTable img{
+    width: 100%;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
