Ajout du colorPicker

--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,10 @@ body{
     padding: 0;
 }
 
+#colorDemoProgress{
+    margin: 7px 0;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
