--- a/css/farbtastic.css
+++ b/css/farbtastic.css
@@ -26,6 +26,7 @@
 .farbtastic, .farbtastic .wheel {
   width: 195px;
   height: 195px;
+  margin: auto;
 }
 .farbtastic .color, .farbtastic .overlay {
   top: 47px;
