Bouton ajout catégorie adminComp (WIP)e

--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,10 @@ body{
     margin: 7px 0;
 }
 
+#addCatButton{
+    padding: 0 30px;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
