Fin du formulaire d'ajout d'une competence

--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,10 @@ body{
     padding: 0 30px;
 }
 
+#minus-button{
+    border-radius: 0;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
