--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,10 @@ body{
     border-radius: 0;
 }
 
+.no-margin{
+    margin: 0;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
